<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OperacionesBasicas">

    <Button
        android:id="@+id/btn_Atras_Basicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_Atras"
        android:text="@string/btn_Atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btn_About_Basicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_About"
        android:text="@string/btn_About"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/etn_Valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etn_valor1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <EditText
        android:id="@+id/etn_Valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etn_valor2"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etn_Valor1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/etn_Valor1"
        app:layout_constraintTop_toBottomOf="@+id/etn_Valor1"
        app:layout_constraintVertical_bias="0.078" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etn_Valor2"
        app:layout_constraintTop_toBottomOf="@+id/etn_Valor2"
        app:layout_constraintVertical_bias="0.184">

        <RadioButton
            android:id="@+id/rb_Sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sumar" />

        <RadioButton
            android:id="@+id/rb_Restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_restar" />

        <RadioButton
            android:id="@+id/rb_Multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_multiplicar" />

        <RadioButton
            android:id="@+id/rb_dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_dividir" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_CalcularBasicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.639" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.247" />
</androidx.constraintlayout.widget.ConstraintLayout>