<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_Atras"
        android:text="@string/btn_Atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btn_About"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_About"
        android:text="@string/btn_About"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btn_OperacionesBasicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_OperacionesBasicas"
        android:text="@string/btn_OperacionesBasicas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <Button
        android:id="@+id/btn_SegundoGrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_EcuacionDeSegundoGrado"
        android:text="@string/btn_SegundoGrado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_OperacionesBasicas"
        app:layout_constraintVertical_bias="0.285" />


</androidx.constraintlayout.widget.ConstraintLayout>

